fix the same issue at the test date by giving z-index to wrap for modal

--- a/test1/css/index.css
+++ b/test1/css/index.css
@@ -9,9 +9,9 @@ a {text-decoration: none; color: inherit}
 /* img {display: block; margin: 0; white-space: nowrap;} */
 .boxing {border: 1px solid red;}
 
-#modal-bg {width: 100%; height: 100%; background: rgba(0,0,0,0.7); position: absolute; top: 0; left: 0; display: none;}
-#modal-wrap {width: 100%; height: 100%; position: absolute; width: 100%; height: 100%; margin: 0 auto; display: none;}
-#modal-body {position: absolute;width: 500px; height: 500px; top: 50%; left: 50%; transform: translate(-50%, -50%); background: plum;}
+#modal-bg {width: 100%; height: 100%; background: rgba(0,0,0,0.7); position: absolute; top: 0; left: 0; display: none; z-index: 99999;}
+#modal-wrap {width: 100%; height: 100%; position: absolute; width: 100%; height: 100%; margin: 0 auto; display: none; z-index: 99999}
+#modal-body {position: absolute;width: 500px; height: 500px; top: 50%; left: 50%; transform: translate(-50%, -50%); background: plum; }
 #modal-content {width: 400px; height: 200px; margin: auto; position: absolute; top: 50%; transform: translate(-50%, -90%); left: 50%; text-align: center;}
 .modal-table {width: 100%; border-collapse: collapse; font-size: 0.9rem; margin-bottom: 30px;} 
 .modal-heading {font-size: 1rem; height: 40px; width: 100%;}
